--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "mdbreact": "^5.0.2",
     "next": "^10.1.3",
+    "next-images": "^1.7.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^1.12.0"
   }
 }
