--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "fondaution",
-  "version": "1.0.0",
-  "description": "this is a web app to fundation",
-  "main": "index.js",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "author": "CarlosPenagos",
-  "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^4.6.0",
-    "mdbreact": "^5.0.2",
-    "next": "^10.1.3",
-    "next-images": "^1.7.0",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.2.3"
-  },
-  "devDependencies": {
-    "babel-plugin-inline-react-svg": "^2.0.1",
-    "babel-plugin-styled-components": "^1.12.0"
-  }
+	"name": "fondaution",
+	"version": "1.0.0",
+	"description": "this is a web app to fundation",
+	"main": "index.js",
+	"scripts": {
+		"lint": "eslint ./",
+		"dev": "next",
+		"build": "next build",
+		"start": "next start"
+	},
+	"author": "CarlosPenagos",
+	"license": "ISC",
+	"dependencies": {
+		"bootstrap": "^4.6.0",
+		"eslint-config-prettier": "^8.2.0",
+		"eslint-plugin-prettier": "^3.3.1",
+		"next": "^10.1.3",
+		"next-images": "^1.7.0",
+		"prettier": "^2.2.1",
+		"react": "^17.0.2",
+		"react-bootstrap": "^1.5.2",
+		"react-dom": "^17.0.2",
+		"styled-components": "^5.2.3"
+	},
+	"devDependencies": {
+		"babel-eslint": "^10.1.0",
+		"babel-plugin-inline-react-svg": "^2.0.1",
+		"babel-plugin-styled-components": "^1.12.0",
+		"eslint": "^7.24.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-react": "^7.23.2",
+		"eslint-plugin-react-hooks": "^4.2.0"
+	}
 }
