--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "CarlosPenagos",
 	"license": "ISC",
 	"dependencies": {
+		"@contentful/rich-text-react-renderer": "^14.1.3",
 		"axios": "^0.21.1",
 		"bootstrap": "^4.6.0",
 		"contentful": "^8.3.1",
